--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
