--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start:render": "node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "dev": "nodemon",
