--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "dotenv-flow": "^4.1.0",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "mysql2": "^3.11.3",
+    "socket.io": "^4.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
